--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790794.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-462956831-320x200.jpg">92届奥斯卡金像奖提名公布 颁奖礼不设主持人</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11791008.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/08/74eee1c6df7db3c9403970bf6c9f81d5-320x200.jpg">【新闻看点】川普邀200人见证签署 促习守承诺</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11786063.md#1">【拍案惊奇】蔡英文连任！北京的三层误判</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11783658.md#1">【更新】蔡英文破817万票 民进党立委过半</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
@@ -30,20 +30,20 @@
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11778295.md#1">伊朗导弹袭基地 美国国防部披露更多细节</a><br>
 <br><p><a href="https://github.com/qgedzr297/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11791062.md#1">深圳区级国企一晚宴吃16万? 网民：冰山一角</a><br>
+<a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11791143.md#1">带家人就诊 成都一法院副局长打医生致其骨折</a><br>
+<a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11791071.md#1">初步协议非贸易战终结 第二阶段涉棘手议题</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11789475.md#1">云南城投集团债务缠身 甩卖资产求生</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11788346.md#1">台湾民主选举 北京穷于应对</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790196.md#1">柯文哲：共产党是国民党的猪队友</a><br>
-<a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11791006.md#1">【新闻看点】港台政策全盘输 习下步如何走？</a><br>
-<a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11791008.md#1">【新闻看点】川普邀200人见证签署 促习兑承诺</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790901.md#1">一年倒闭近2万家 大陆游戏公司陷窘境</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790922.md#1">十家九亏 大陆去年超3000奶茶企业倒闭</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790557.md#1">60国家及组织恭贺连任 蔡英文：共享民主喜悦</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790689.md#1">人权组织成员被拒入香港 吁抵制中共霸权</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790555.md#1">台作家：绿营执政首要任务“消灭红色渗透”</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790437.md#1">西宁医院门口地面塌陷 载人公交车掉进大坑</a><br>
-<a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790573.md#1">组图：3.6万人集会要求港府立即民主政改</a><br>
-<a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11791071.md#1">初步协议非贸易战终结 第二阶段涉棘手议题</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11791068.md#1">签署协议前 传美将移除中国外汇操纵国标签</a><br>
+<a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790794.md#1">92届奥斯卡金像奖提名公布 颁奖礼不设主持人</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790482.md#1">还能承袭经国精神？柯志恩：国民党距民意太远</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790842.md#1">美副助卿：中共藉密码法伸长臂夺敏感数据</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790795.md#1">前美官员：中共用特洛伊木马战略渗透全球</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/qgedzr297/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,778,060 人
+- 共 349,778,542 人
 ```
 </strong>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
